--- a/create_ec2.yml
+++ b/create_ec2.yml
@@ -13,6 +13,7 @@
     security_group: "sg-0c53b71e41ce49c2c"
     subnet_id: "subnet-0bb0fa4f752124e68"
     tag_name: "ansible-server"
+    ansible_python_interpreter: /usr/bin/python3
   
   tasks:
     - name: Create EC2 Instance
